# hexlet-django-blog

./: .gitignore  README.md  manage.py  pyproject.toml
hexlet_django_blog/: Makefile  asgi.py  settings.py  urls.py  views.py  wsgi.py
hexlet_django_blog/article/: admin.py  apps.py  models.py  urls.py  views.py
hexlet_django_blog/article/templates/articles/: index.html
