[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = "My first Django project try"
authors = ["vitallcore <vitaslipknot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
