[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = "My first Django project try"
authors = ["vitallcore <vitaslipknot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-bootstrap4 = "^3.0.1"
python-dotenv = "^0.17.1"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
